feat: upgrade zod to v4

--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -37,6 +37,7 @@
     "express": "^5.1.0",
     "langchain": "1.0.0-alpha.7",
     "uuid": "^13.0.0",
-    "zod": "^3.25.76"
+    "zod": "^4.1.12",
+    "zod3": "npm:zod@^3.25.76"
   }
 }
