--- a/packages/prompt-registry/package.json
+++ b/packages/prompt-registry/package.json
@@ -8,6 +8,11 @@
     "ai-api",
     "prompt-registry"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SAP/ai-sdk-js.git",
+    "directory": "packages/prompt-registry"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
