--- a/packages/document-grounding/package.json
+++ b/packages/document-grounding/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/SAP/ai-sdk-js.git",
+    "url": "https://github.com/SAP/ai-sdk-js",
     "directory": "packages/document-grounding"
   },
   "type": "module",
