--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -9,7 +9,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/SAP/ai-sdk-js.git",
+    "url": "https://github.com/SAP/ai-sdk-js",
     "directory": "packages/langchain"
   },
   "type": "module",
