--- a/packages/orchestration/package.json
+++ b/packages/orchestration/package.json
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/SAP/ai-sdk-js.git",
+    "url": "https://github.com/SAP/ai-sdk-js",
     "directory": "packages/orchestration"
   },
   "type": "module",
