chore: Add repository.url in `package.json` (#1193)
* add repository.url

* remove .git

* fix: Changes from lint

---------

Co-authored-by: cloud-sdk-js <cloud-sdk-js@github.com>

--- a/packages/ai-api/package.json
+++ b/packages/ai-api/package.json
@@ -7,6 +7,11 @@
     "sap-ai-sdk",
     "ai-api"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SAP/ai-sdk-js",
+    "directory": "packages/ai-api"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
