--- a/packages/orchestration/package.json
+++ b/packages/orchestration/package.json
@@ -8,6 +8,11 @@
     "orchestration",
     "llm-access"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SAP/ai-sdk-js",
+    "directory": "packages/orchestration"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
