--- a/packages/document-grounding/package.json
+++ b/packages/document-grounding/package.json
@@ -10,6 +10,11 @@
     "grounding",
     "vector"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SAP/ai-sdk-js",
+    "directory": "packages/document-grounding"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
