--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -21,10 +21,11 @@
     "lint:fix": "eslint . --fix && prettier . --config ../.prettierrc --ignore-path ../.prettierignore -w --log-level error"
   },
   "dependencies": {
-    "@langchain/core": "^1.0.0-alpha.6",
-    "@langchain/langgraph": "^1.0.0-alpha.5",
-    "@langchain/mcp-adapters": "^0.6.0",
-    "@langchain/textsplitters": "1.0.0-alpha.1",
+    "@langchain/classic": "^1.0.0",
+    "@langchain/core": "^1.0.1",
+    "@langchain/langgraph": "^1.0.0",
+    "@langchain/mcp-adapters": "^1.0.0",
+    "@langchain/textsplitters": "^1.0.0",
     "@modelcontextprotocol/sdk": "^1.20.0",
     "@sap-ai-sdk/ai-api": "workspace:^",
     "@sap-ai-sdk/document-grounding": "workspace:^",
@@ -35,9 +36,8 @@
     "@sap-cloud-sdk/util": "^4.1.2",
     "@types/express": "^5.0.3",
     "express": "^5.1.0",
-    "langchain": "1.0.0-alpha.7",
+    "langchain": "^1.0.1",
     "uuid": "^13.0.0",
-    "zod": "^4.1.12",
-    "zod3": "npm:zod@^3.25.76"
+    "zod": "^4.1.12"
   }
 }
