--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,11 @@ updates:
       # We only want to do major node updates on purpose, so don't create dependabot PRs for major versions
       - dependency-name: '@types/node'
         update-types: ['version-update:semver-major']
+      # Skip v1-release until compability is handled throughout the project
+      - dependency-name: 'langchain'
+        update-types: ['version-update:semver-major']
+      - dependency-name: '@langchain/*'
+        update-types: ['version-update:semver-major']
     groups:
       sap-cloud-sdk:
         patterns: ['@sap-cloud-sdk/*']
