--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,6 +32,11 @@ updates:
       # We only want to do major node updates on purpose, so don't create dependabot PRs for major versions
       - dependency-name: '@types/node'
         update-types: ['version-update:semver-major']
+      # Avoid langchain-v1 release for sdk v1-main
+      - dependency-name: 'langchain'
+        update-types: ['version-update:semver-major']
+      - dependency-name: '@langchain/*'
+        update-types: ['version-update:semver-major']
     groups:
       sap-cloud-sdk:
         patterns: ['@sap-cloud-sdk/*']
