--- a/package.json
+++ b/package.json
@@ -33,15 +33,12 @@
     "check:deps": "pnpm -r -F !./tests/smoke-tests -F !./sample-cap exec depcheck --ignores=\"nock,@jest/globals\" --quiet"
   },
   "devDependencies": {
-    "orval": "^7.17.0",
-    "zod": "^3.25.76",
     "@changesets/cli": "^2.29.7",
     "@jest/globals": "^30.2.0",
     "@sap-ai-sdk/ai-api": "workspace:^",
     "@sap-ai-sdk/core": "workspace:^",
     "@sap-ai-sdk/foundation-models": "workspace:^",
     "@sap-ai-sdk/orchestration": "workspace:^",
-    "tsx": "^4.20.6",
     "@sap-cloud-sdk/connectivity": "^4.1.2",
     "@sap-cloud-sdk/eslint-config": "^4.1.2",
     "@sap-cloud-sdk/generator-common": "^4.1.2",
@@ -59,9 +56,12 @@
     "jsonwebtoken": "^9.0.2",
     "mock-fs": "^5.5.0",
     "nock": "^14.0.10",
+    "orval": "^7.17.0",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "zod": "^4.1.13"
   }
 }
