--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@langchain/classic": "^1.0.5",
     "@langchain/core": "^1.1.0",
+    "langchain": "^1.0.0",
     "@langchain/langgraph": "^1.0.2",
     "@langchain/mcp-adapters": "^1.0.1",
     "@langchain/textsplitters": "^1.0.1",
