fix: Adapt RAG example to use `createAgent ` (#1302)

--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@langchain/classic": "^1.0.5",
+    "langchain": "^1.0.0",
     "@langchain/core": "^1.1.4",
     "@langchain/langgraph": "^1.0.4",
     "@langchain/mcp-adapters": "^1.0.3",
