Changed moels to gpt-5

--- a/sample-code/src/model-orchestration-config.json
+++ b/sample-code/src/model-orchestration-config.json
@@ -2,7 +2,7 @@
   "modules": {
     "prompt_templating": {
       "model": {
-        "name": "gpt-4o",
+        "name": "gpt-5",
         "params": {},
         "version": "latest"
       },
