--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "lint:fix": "pnpm -r run lint:fix",
     "generate": "pnpm -r run generate",
     "ai-api": "pnpm -F=@sap-ai-sdk/ai-api",
-    "foundation-models": "pnpm -F=@sap-ai-sdk/foundation-models",
-    "orchestration": "pnpm -F=@sap-ai-sdk/orchestration",
     "core": "pnpm -F=@sap-ai-sdk/core",
     "document-grounding": "pnpm -F=@sap-ai-sdk/document-grounding",
+    "foundation-models": "pnpm -F=@sap-ai-sdk/foundation-models",
     "langchain": "pnpm -F=@sap-ai-sdk/langchain",
+    "orchestration": "pnpm -F=@sap-ai-sdk/orchestration",
     "prompt-registry": "pnpm -F=@sap-ai-sdk/prompt-registry",
+    "rpt": "pnpm -F=@sap-ai-sdk/rpt",
     "e2e-tests": "pnpm -F=@sap-ai-sdk/e2e-tests",
     "type-tests": "pnpm -F=@sap-ai-sdk/type-tests",
     "smoke-tests": "pnpm -F=@sap-ai-sdk/smoke-tests",
