fix: Pin @langchain/core to 1.1.8 due to regression

--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -43,6 +43,6 @@
     "@langchain/langgraph": "^1.0.7"
   },
   "peerDependencies": {
-    "@langchain/core": "^1.1.8"
+    "@langchain/core": "=1.1.8"
   }
 }
