--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@langchain/classic": "^1.0.7",
     "langchain": "^1.2.3",
-    "@langchain/core": "^1.1.8",
+    "@langchain/core": "=1.1.8",
     "@langchain/langgraph": "^1.0.7",
     "@langchain/mcp-adapters": "^1.1.1",
     "@langchain/textsplitters": "^1.0.1",
