--- a/packages/rpt/package.json
+++ b/packages/rpt/package.json
@@ -35,6 +35,8 @@
     "update-imports": "node --no-warnings --loader ts-node/esm ../../scripts/update-imports.ts ./src/client/rpt"
   },
   "dependencies": {
-    "@sap-ai-sdk/core": "workspace:^"
+    "@sap-ai-sdk/ai-api": "workspace:^",
+    "@sap-ai-sdk/core": "workspace:^",
+    "@sap-ai-sdk/foundation-models": "workspace:^"
   }
 }
