feat: Support `.withStructuredOutput` in orchestration langchain client
fix: Changes from lint

--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -40,7 +40,8 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@langchain/langgraph": "^1.0.7"
+    "@langchain/langgraph": "^1.0.7",
+    "zod": "^4.3.5"
   },
   "peerDependencies": {
     "@langchain/core": "=1.1.8"
