--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,7 +9,7 @@ inputs:
     default: 'https://registry.npmjs.org'
   pnpm-version:
     description: 'PNPM version'
-    default: '10.28.0'
+    default: '10'
   pnpm-install-args:
     description: 'Arguments to pass to pnpm install'
     default: '--frozen-lockfile'
@@ -29,7 +29,7 @@ runs:
         token: ${{ inputs.token }}
     - uses: pnpm/action-setup@v4
       with:
-        version: ${{ inputs.pnpm-version }}
+        version: 10.28.0
     - uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node-version }}
