--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,20 +7,20 @@ on:
   workflow_dispatch: ~
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  # test:
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: ${{ fromJSON(vars.SUPPORTED_NODE_VERSIONS) }}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       node-version: ${{ fromJSON(vars.SUPPORTED_NODE_VERSIONS) }}
 
-    steps:
-      - uses: sap/ai-sdk-js/.github/actions/setup@main
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: pnpm test:unit
-      - run: pnpm test:type
+  #   steps:
+  #     - uses: sap/ai-sdk-js/.github/actions/setup@main
+  #       with:
+  #         node-version: ${{ matrix.node-version }}
+  #     - run: pnpm test:unit
+  #     - run: pnpm test:type
 
   checks:
     runs-on: ubuntu-latest
@@ -28,31 +28,31 @@ jobs:
       - uses: sap/ai-sdk-js/.github/actions/setup@main
         with:
           node-version: ${{ vars.DEFAULT_NODE_VERSION }}
-      - name: REUSE Compliance Check
-        uses: fsfe/reuse-action@v6
-      - run: pnpm generate
-      - name: Enforce generated code is up to date
-        run: |
-          if [[ -n "$(git status --porcelain)" ]]; then
-            echo "Generated code is out of date. The following changes were found after generating:"
-            git status
-            echo "Please run 'pnpm generate' and commit the changes."
-            exit 1
-          fi
-      - run: pnpm lint
-      - name: Check CommonJS compatibility
-        run: pnpm compile:cjs
-      - name: Set NODE_PATH
-        run: echo "NODE_PATH=$(pwd)/node_modules" >> $GITHUB_ENV
-      - name: Check public API
-        uses: sap/cloud-sdk-js/.github/actions/check-public-api@main
-        with:
-          force_internal_exports: 'false'
-          ignored_path_pattern: '.*?/client/.*?/schema|.*?/zod/.*?'
+      # - name: REUSE Compliance Check
+      #   uses: fsfe/reuse-action@v6
+      # - run: pnpm generate
+      # - name: Enforce generated code is up to date
+      #   run: |
+      #     if [[ -n "$(git status --porcelain)" ]]; then
+      #       echo "Generated code is out of date. The following changes were found after generating:"
+      #       git status
+      #       echo "Please run 'pnpm generate' and commit the changes."
+      #       exit 1
+      #     fi
+      # - run: pnpm lint
+      # - name: Check CommonJS compatibility
+      #   run: pnpm compile:cjs
+      # - name: Set NODE_PATH
+      #   run: echo "NODE_PATH=$(pwd)/node_modules" >> $GITHUB_ENV
+      # - name: Check public API
+      #   uses: sap/cloud-sdk-js/.github/actions/check-public-api@main
+      #   with:
+      #     force_internal_exports: 'false'
+      #     ignored_path_pattern: '.*?/client/.*?/schema|.*?/zod/.*?'
       - name: Check dependencies
         run: pnpm check:deps
-      - name: License Check
-        uses: sap/cloud-sdk-js/.github/actions/check-license@main
+      # - name: License Check
+      #   uses: sap/cloud-sdk-js/.github/actions/check-license@main
 
   dependabot:
     runs-on: ubuntu-latest
