--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
   dependabot:
     runs-on: ubuntu-latest
     if: ${{ (github.actor == 'dependabot[bot]' || startsWith(github.event.pull_request.title, 'chore(deps')) && github.event_name == 'pull_request' }}
-    needs: [test, checks]
+    needs: [checks]
     permissions:
       pull-requests: write
       contents: write
