--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
   checks:
     runs-on: ubuntu-latest
     steps:
-      - uses: sap/ai-sdk-js/.github/actions/setup@main
+      - uses: sap/ai-sdk-js/.github/actions/setup@restrict-pnpm-version
         with:
           node-version: ${{ vars.DEFAULT_NODE_VERSION }}
       # - name: REUSE Compliance Check
