--- a/.github/workflows/spec-update-cron.yaml
+++ b/.github/workflows/spec-update-cron.yaml
@@ -1,4 +1,4 @@
-name: "Spec File Update Workflow (Cron Job)"
+name: 'Spec File Update Workflow (Cron Job)'
 
 on:
   schedule:
@@ -7,7 +7,7 @@ on:
     #  2025-04-16 03:21:00
     #  2025-05-01 03:21:00
     #  2025-05-16 03:21:00
-    - cron: 21 3 1/15 * * 
+    - cron: 21 3 1/15 * *
 
 jobs:
   spec-update-ai-api:
@@ -24,4 +24,21 @@ jobs:
     uses: SAP/ai-sdk-js/.github/workflows/spec-update.yaml@main
     with:
       file: prompt-registry
+    secrets: inherit
+  get-rpt-tag:
+    runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.get-tag.outputs.tag }}
+    steps:
+      - name: Get latest tag
+        id: get-tag
+        run: |
+          TAG=$(git -c 'versionsort.suffix=-' ls-remote --tags --sort='v:refname' https://github.tools.sap/DL-COE/sap-rpt-1-public-content | tail --lines=1 | cut -f 2)
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+  spec-update-rpt:
+    needs: get-rpt-tag
+    uses: SAP/ai-sdk-js/.github/workflows/spec-update.yaml@main
+    with:
+      file: rpt
+      file-ref: ${{ needs.get-rpt-tag.outputs.tag }}
     secrets: inherit
