--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -15,7 +15,7 @@ body:
       label: "Checklist"
       description: "Before submitting your issue, please make sure to check the following:"
       options:
-        - label: "My issue is not an AI Core service issue, but an SDK issue."
+        - label: "My issue is not an [AI Core service issue](https://help.sap.com/docs/sap-ai-core/sap-ai-core-service-guide/support-process), but an SDK issue."
           required: true
         - label: "My issue is a JS/TS related issue, not a Java related issue."
           required: true
