--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -17,7 +17,7 @@ body:
       options:
         - label: "My issue is not an [AI Core service issue](https://help.sap.com/docs/sap-ai-core/sap-ai-core-service-guide/support-process), but an SDK issue."
           required: true
-        - label: "My issue is a JS/TS related issue, not a Java related issue."
+        - label: "My issue is a JS/TS related issue, not a [Java related issue](https://github.com/SAP/ai-sdk-java/issues)."
           required: true
         - label: "My issue is not already reported or documented."
           required: true
