--- a/package.json
+++ b/package.json
@@ -30,12 +30,7 @@
     "smoke-tests": "pnpm -F=@sap-ai-sdk/smoke-tests",
     "sample-code": "pnpm -F=@sap-ai-sdk/sample-code",
     "sample-cap": "pnpm -F=@sap-ai-sdk/sample-cap",
-    "check:deps": "pnpm -r -F !./tests/smoke-tests -F !./sample-cap exec depcheck --json --ignores=\"nock,@jest/globals,hono\" "
-  },
-  "pnpm": {
-    "overrides": {
-      "hono": ">=4.11.4"
-    }
+    "check:deps": "pnpm -r -F !./tests/smoke-tests -F !./sample-cap exec depcheck --ignores=\"nock,@jest/globals\" --quiet"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
