Revert "fix pnpm version to 10.28.0"
This reverts commit a48d754ee97b88eac4b02d01770782b62b09b1b1.

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,7 +9,7 @@ inputs:
     default: 'https://registry.npmjs.org'
   pnpm-version:
     description: 'PNPM version'
-    default: '10.28.0' # 10.28.1 has issues with depdendency checks
+    default: '10'
   pnpm-install-args:
     description: 'Arguments to pass to pnpm install'
     default: '--frozen-lockfile'
