--- a/packages/rpt/package.json
+++ b/packages/rpt/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@sap-ai-sdk/ai-api": "workspace:^",
     "@sap-ai-sdk/core": "workspace:^",
-    "@sap-ai-sdk/foundation-models": "workspace:^"
+    "@sap-cloud-sdk/connectivity": "^4.3.1",
+    "@sap-cloud-sdk/util": "^4.3.1"
   }
 }
