feat: RPT-1 beta (#1419)
* add generated client + workflows for rpt

* Update rpt based on main (#1418)

Co-authored-by: SAP Cloud SDK Bot <cloudsdk@sap.com>

* Add a client wrapper

* Playing around with restrictive types

* Add manual client

* Improve types

* move schema to first position

* move schema to first position

* fix: Changes from lint

* add e2e and type tests

* improve type

* replace with array

* fix types

* fix comments

* change to two functions

* Update docs

* add date to sample

* wip

* fix: Changes from lint

* expose correctly

* Add pregenerate script

* fix tests add docs

* readme lines

* export *

* add postgenerate step

* hopefully adjust the cron job

* adjustments from review

* fix type

* Remove top_k

* complete renaming

* change import

* fix export

* rename predict into predictWithSchema

* add test for predictWithoutSchema

* move orchestration get deployment id to ai-api

* replace reduce with Object.fromEntries

* fix deps check

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: SAP Cloud SDK Bot <cloudsdk@sap.com>
Co-authored-by: cloud-sdk-js <cloud-sdk-js@github.com>
Co-authored-by: Zhongpin Wang <zhongpin.wang@sap.com>

--- a/.github/workflows/spec-update.yaml
+++ b/.github/workflows/spec-update.yaml
@@ -12,6 +12,14 @@ on:
           - document-grounding
           - orchestration
           - prompt-registry
+        #
+        # NOTES:
+        #
+        # Currently the spec is adjusted manually, changes:
+        # - Replaced all occurrences of `"type": "null"` with `"nullable": true`, otherwise types are incorrect. (Colleagues are informed.)
+        # - Removed top_k parameter, it is not yet released.
+        #
+        # - rpt
         default: orchestration
       file-ref:
         description: 'Branch or tag to checkout the spec file from'
@@ -101,6 +109,10 @@ jobs:
               API_URL="repos/AI/prompt-registry/contents/src/spec/generated/prompt-registry-combined.yaml?ref=$REF"
               FILE_PATH='packages/prompt-registry/src/spec/prompt-registry.yaml'
               ;;
+            # rpt)
+            #   API_URL="repos/DL-COE/sap-rpt-1-public-content/contents/sap-rpt-1_openapi.json?ref=$REF"
+            #   FILE_PATH='packages/rpt/src/spec/rpt.json'
+            #   ;;
           esac
 
           echo "Downloading $CHOICE specification file from $API_URL ..."
