--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -33,6 +33,7 @@
     "@sap-ai-sdk/langchain": "workspace:^",
     "@sap-ai-sdk/orchestration": "workspace:^",
     "@sap-ai-sdk/prompt-registry": "workspace:^",
+    "@sap-ai-sdk/rpt": "workspace:^",
     "@sap-cloud-sdk/util": "^4.3.1",
     "@types/express": "^5.0.6",
     "express": "^5.2.1",
