--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -15,7 +15,7 @@
     "start": "node --loader ts-node/esm src/server.ts",
     "local": "node --env-file=.env --loader ts-node/esm src/server.ts",
     "agent-tutorial": "node --env-file=.env --loader ts-node/esm src/tutorials/travel-itinerary-agent.ts",
-    "compile": "tsc",
+    "compile": "tsc && cp src/product_data.parquet dist/",
     "dev": "tsc -w",
     "lint": "eslint . && prettier . --config ../.prettierrc --ignore-path ../.prettierignore -c",
     "lint:fix": "eslint . --fix && prettier . --config ../.prettierrc --ignore-path ../.prettierignore -w --log-level error"
