--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -40,7 +40,8 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@langchain/langgraph": "^1.1.4"
+    "@langchain/langgraph": "^1.1.4",
+    "zod": "^4.3.6"
   },
   "peerDependencies": {
     "@langchain/core": "^1.1.16"
