--- a/.github/workflows/spec-update-cron.yaml
+++ b/.github/workflows/spec-update-cron.yaml
@@ -25,6 +25,11 @@ jobs:
     with:
       file: prompt-registry
     secrets: inherit
+  spec-update-orchestration:
+    uses: SAP/ai-sdk-js/.github/workflows/spec-update.yaml@main
+    with:
+      file: orchestration
+    secrets: inherit
   # see comments in spec-update.yaml
   # get-rpt-tag:
   #   runs-on: ubuntu-latest
