chore: Generate API docs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,8 @@ jobs:
         run: pnpm check:deps
       - name: License Check
         uses: sap/cloud-sdk-js/.github/actions/check-license@main
+      - run: pnpm doc
+        name: API Doc Check
 
   dependabot:
     runs-on: ubuntu-latest
