--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "pnpm -r run lint",
     "lint:fix": "pnpm -r run lint:fix",
     "generate": "pnpm -r run generate",
+    "doc": "ts-node scripts/generate-docs.ts",
     "ai-api": "pnpm -F=@sap-ai-sdk/ai-api",
     "core": "pnpm -F=@sap-ai-sdk/core",
     "document-grounding": "pnpm -F=@sap-ai-sdk/document-grounding",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
     "@jest/globals": "^30.2.0",
+    "typedoc": "^0.28.16",
     "@sap-ai-sdk/ai-api": "workspace:^",
     "@sap-ai-sdk/core": "workspace:^",
     "@sap-ai-sdk/foundation-models": "workspace:^",
@@ -52,6 +54,7 @@
     "@types/node": "^22.19.10",
     "depcheck": "^1.4.7",
     "eslint": "^9.39.2",
+    "execa": "^5.0.0",
     "glob": "^13.0.1",
     "jest": "^30.2.0",
     "jsonwebtoken": "^9.0.3",
