--- a/packages/foundation-models/package.json
+++ b/packages/foundation-models/package.json
@@ -38,7 +38,6 @@
     "@sap-ai-sdk/ai-api": "workspace:^",
     "@sap-ai-sdk/core": "workspace:^",
     "@sap-cloud-sdk/http-client": "^4.4.0",
-    "@sap-cloud-sdk/util": "^4.4.0",
-    "@sap-cloud-sdk/connectivity": "^4.4.0"
+    "@sap-cloud-sdk/util": "^4.4.0"
   }
 }
