avoid merge if !allAcceptable

--- a/.github/workflows/pnpm-update.yml
+++ b/.github/workflows/pnpm-update.yml
@@ -106,6 +106,7 @@ jobs:
 
                 if (!allAcceptable) {
                   console.log(`PR #${pr.number} has failed checks that prevent merging.`);
+                  return 'failed-checks';
                 }
 
                 return 'success';
