--- a/tsconfig.typedoc.json
+++ b/tsconfig.typedoc.json
@@ -55,7 +55,7 @@
     "includeVersion": true,
     "hideGenerator": true,
     "excludePrivate": true,
-    "treatWarningsAsErrors": true,
+    "treatWarningsAsErrors": false,
     "validation": {
       "invalidLink": true
     },
