--- a/.github/workflows/api-docs.yml
+++ b/.github/workflows/api-docs.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-          echo "${{ secrets.GH_CLOUD_SDK_JS_ADMIN_WRITE_TOKEN }}" > ~/.ssh/id_rsa
+          echo "${{ secrets.GH_AI_SDK_WRITE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           cat <<EOT >> ~/.ssh/config
           Host github.com
